PULPO-285 fix json sent

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -10290,7 +10290,7 @@
     "                                             ('pagesVisited', url_to_view_count_list)])\n",
     "                keyword_to_url_json_string_list.append(keyword_entry)\n",
     "\n",
-    "            json_text = json.dumps(OrderedDict([('partitionKey', partition_key),\n",
+    "            json_text = json.dumps(OrderedDict([('partitionkey', partition_key),\n",
     "                                                ('segmentIdentifier', segment_id),\n",
     "                                                ('analyticsKey', 'www.liferay.com'), \n",
     "                                                ('currdate', curr_date_string), \n",
