PULPO-285 fix json fields

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -1672,7 +1672,7 @@
     "                        \n",
     "                    url_to_visit_count_list.append(\n",
     "                        OrderedDict([('url', url), \n",
-    "                                     ('visitCount', visit_count)]))\n",
+    "                                     ('uniqueVisitsCount', visit_count)]))\n",
     "\n",
     "\n",
     "                user_to_keyword_info_list.append(\n",
@@ -1682,8 +1682,8 @@
     "\n",
     "            json_text = json.dumps(\n",
     "                OrderedDict([('analyticsKey', analytics_key), \n",
-    "                            ('partitionKey', partition_key),\n",
-    "                            ('userid', user_id),\n",
+    "                            ('partitionkey', partition_key),\n",
+    "                            ('userId', user_id),\n",
     "                            ('Current Date', curr_date_string),\n",
     "                            ('interests', user_to_keyword_info_list)]))\n",
     "\n",
@@ -1770,7 +1770,7 @@
     "    \n",
     "                for url, view_count in url_to_counts.items():\n",
     "                    url_to_view_count_entry = OrderedDict([('url', url),\n",
-    "                                                           ('visitCount', view_count)])\n",
+    "                                                           ('uniqueVisitsCount', view_count)])\n",
     "                    url_to_view_count_list.append(url_to_view_count_entry)\n",
     "                    \n",
     "                keyword_entry = OrderedDict([('name', topic_of_interest), \n",
