PULPO-285 analytics key is mandatory (using hardcoded value for now)

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -1779,6 +1779,7 @@
     "\n",
     "            json_text = json.dumps(OrderedDict([('partitionKey', partition_key),\n",
     "                                                ('segmentIdentifier', segment_id),\n",
+    "                                                ('analyticsKey', 'www.liferay.com'), \n",
     "                                                ('interests', keyword_to_url_json_string_list)]))\n",
     "            if not LCS_MESSAGING_ENABLED:\n",
     "                output_file.write(\"{}\\n\".format(json_text))\n",
