--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -29,8 +29,8 @@
    "outputs": [],
    "source": [
     "# File Path Constants\n",
-    "URL_IGNORE_LIST_PATH              = './configuration/URL Ignore List.json'\n",
-    "KEYWORD_IGNORE_LIST_PATH          = './configuration/Keyword Ignore List.txt'\n",
+    "URL_IGNORE_LIST_PATH              = './configuration/url-ignore-list.json'\n",
+    "KEYWORD_IGNORE_LIST_PATH          = './configuration/keyword-ignore-list.txt'\n",
     "USER_SEGMENT_LIST_PATH            = './configuration/part-00000-2aa20d63-3e3a-47d2-8bed-d199cef5b814-c000.json'\n",
     "DATERANGE_CONFIGURATION_PATH      = './configuration/daterange.txt'\n",
     "AMAZON_WEB_SERVICE_E3_BASE_FOLDER = r'C:\\Users\\liferay\\Documents\\analytics data\\export'"
@@ -256,7 +256,7 @@
     "    \"\"\"\n",
     "    The purpose of this function is to replace non-ASCII punctuation with its equivalent.\n",
     "    \"\"\"\n",
-    "    return text.replace(\"’\", \"'\")\n",
+    "    return text.replace(\"???\", \"'\")\n",
     "\n",
     "def segmentWordsIntoKeyWordPhraseList(words, debug=False):\n",
     "\n",
@@ -1951,7 +1951,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1134 rows × 41 columns</p>\n",
+       "<p>1134 rows ?? 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3389,8 +3389,8 @@
     "    return url_to_keyword_df\n",
     "\n",
     "def addKeywordBoosting(df, debug=True):\n",
-    "    www_lr_manual_keywords = pd.read_csv('./manually generated keywords/www-lr-manual-keywords.csv')\n",
-    "    customer_lr_manual_keywords = pd.read_csv('./manually generated keywords/customer-lr-manual-keywords.csv')\n",
+    "    www_lr_manual_keywords = pd.read_csv('./keywords/www-lr-manual-keywords.csv')\n",
+    "    customer_lr_manual_keywords = pd.read_csv('./keywords/customer-lr-manual-keywords.csv')\n",
     "    all_lr_manual_keywords = www_lr_manual_keywords.append(customer_lr_manual_keywords, ignore_index=True)\n",
     "    all_lr_manual_keywords = all_lr_manual_keywords[['URL', 'Keywords']]\n",
     "    all_lr_manual_keywords = all_lr_manual_keywords.dropna(how='any')\n",
@@ -5396,7 +5396,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1967 rows × 6 columns</p>\n",
+       "<p>1967 rows ?? 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
