PULPO-245 Remove play sound

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -253,16 +253,6 @@
     "from string import printable\n",
     "\n",
     "\n",
-    "def playFinishedSound():\n",
-    "    \"\"\"\n",
-    "    This is for alerting me that something has finished executing.\n",
-    "    This will play a sound.\n",
-    "    \"\"\"\n",
-    "    from pygame import mixer\n",
-    "    mixer.init()\n",
-    "    mixer.music.load('./configuration/finished.mp3')\n",
-    "    mixer.music.play()\n",
-    "\n",
     "def replace_punctuation(text):\n",
     "    \"\"\"\n",
     "    The purpose of this function is to replace non-ASCII punctuation with its equivalent.\n",
@@ -3151,7 +3141,7 @@
     "                except:\n",
     "                    print(\"Unexpected error detected!\") \n",
     "                    \n",
-    "playFinishedSound()"
+    "os.write(1, \"\\nFinished\".encode())\n"
    ]
   },
   {
