--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -1684,6 +1684,7 @@
     "                OrderedDict([('analyticsKey', analytics_key), \n",
     "                            ('partitionkey', partition_key),\n",
     "                            ('userId', user_id),\n",
+    "                            ('currdate', curr_date_string),\n",
     "                            ('interests', user_to_keyword_info_list)]))\n",
     "\n",
     "            if not LCS_MESSAGING_ENABLED:\n",
@@ -1779,6 +1780,7 @@
     "\n",
     "            json_text = json.dumps(OrderedDict([('partitionKey', partition_key),\n",
     "                                                ('segmentIdentifier', segment_id),\n",
+    "                                                ('currdate', curr_date_string), \n",
     "                                                ('analyticsKey', 'www.liferay.com'), \n",
     "                                                ('interests', keyword_to_url_json_string_list)]))\n",
     "            if not LCS_MESSAGING_ENABLED:\n",
