PULPO-285 Modified reading segment information from AWS instead of local file. Also removed local segment file.

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -861,20 +861,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.option_context('display.max_rows', 10, 'display.max_columns', None, 'display.max_colwidth', 50):\n",
-    "    display(full_df['context.contentLanguageId'].unique())\n",
-    "    display(full_df[full_df['context.contentLanguageId'] == 'ru-RU'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.option_context('display.max_rows', 10, 'display.max_columns', None, 'display.max_colwidth', 50):\n",
-    "    display(full_df['context.contentLanguageId'].unique())\n",
-    "    display(full_df[full_df['context.contentLanguageId'] == 'ru-RU'])"
+    "# Populate Segment Information\n",
+    "keys_list = get_s3_keys(s3, 'lcs-ec-analytics')\n",
+    "\n",
+    "# Verify _SUCCESS file is in the /user_individual_segment/ folder\n",
+    "if 'export/user_individual_segment/_SUCCESS' not in keys_list:\n",
+    "    print(\"[WARNING] - export/user_individual_segment/_SUCCESS does not exist!\")\n",
+    "    os.write(1, \"\\n[WARNING] - export/user_individual_segment/_SUCCESS does not exist!\".encode())\n",
+    "else:\n",
+    "    print(\"export/user_individual_segment/_SUCCESS exists!\")\n",
+    "    os.write(1, \"\\nexport/user_individual_segment/_SUCCESS exists!\".encode())\n",
+    "\n",
+    "# Check in the keys_list that the /user_individual_segment/ folder exists, and the JSON file is there\n",
+    "segment_file_list = [match for match in keys_list if ('export/user_individual_segment/' in match) & (match.endswith('.json'))]\n",
+    "\n",
+    "if len(segment_file_list) == 0:\n",
+    "    print(\"[WARNING] - No segment file exists!\")\n",
+    "    os.write(1, \"\\n[WARNING] - No segment file exists!\".encode())\n",
+    "    print(segment_file_list)\n",
+    "if len(segment_file_list) > 1:\n",
+    "    print(\"[WARNING] - More than 1 segment file exists! Using the first one...\")\n",
+    "    os.write(1, \"\\n[WARNING] - More than 1 segment file exists! Using the first one...\".encode())\n",
+    "    print(segment_file_list)\n",
+    "else:\n",
+    "    print(\"Exactly 1 segment file exists\")\n",
+    "    os.write(1, \"\\n[WARNING] - Exactly 1 segment file exists\".encode())\n",
+    "\n",
+    "file_path = BASE_S3_FILE_DIRECTORY + segment_file_list[0]\n",
+    "print(\"Reading from: {}\".format(file_path))\n",
+    "os.write(1, \"\\nReading from: {}\".format(file_path).encode())\n",
+    "\n",
+    "json_list = []\n",
+    "segment_lookup_df = pd.DataFrame()\n",
+    "\n",
+    "for line in smart_open.smart_open(file_path):\n",
+    "    line = line.decode(\"utf-8\").strip()\n",
+    "    dict_entry = json.loads(line)       \n",
+    "    json_list.append(dict_entry)\n",
+    "\n",
+    "print(\"\\tEntries: {}\".format(len(json_list)))\n",
+    "\n",
+    "segment_lookup_df = json_normalize(json_list)\n",
+    "display(segment_lookup_df)\n",
+    "segment_lookup_df = segment_lookup_df.set_index(['identifier', 'datasource', 'datasourceindividualpk'])['segmentnames'].apply(pd.Series).stack()\n",
+    "segment_lookup_df = pd.DataFrame(segment_lookup_df)\n",
+    "segment_lookup_df = segment_lookup_df.reset_index().rename(columns={0 : 'segmentName'})\n",
+    "\n",
+    "# Switch order of columns\n",
+    "segment_lookup_df = segment_lookup_df[['segmentName', 'identifier', 'datasource', 'datasourceindividualpk']]\n",
+    "display(segment_lookup_df)"
    ]
   },
   {
