PULPO-285 Revert changes in merge commit

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -1693,6 +1693,7 @@
     "                OrderedDict([('analyticsKey', analytics_key), \n",
     "                            ('partitionkey', partition_key),\n",
     "                            ('userId', user_id),\n",
+    "                            ('currdate', curr_date_string),\n",
     "                            ('interests', user_to_keyword_info_list)]))\n",
     "\n",
     "            if not LCS_MESSAGING_ENABLED:\n",
