PULPO-285 Avoid errors if no matches were found

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -1908,13 +1908,14 @@
     "    \n",
     "    \n",
     "    \n",
-    "    # Move currdate & segmentIdentifier to front\n",
-    "    currdate_column = all_segment_info_df['currdate']\n",
-    "    segment_id_column = all_segment_info_df['segmentIdentifier']\n",
-    "    all_segment_info_df.drop('currdate', axis=1, inplace=True)\n",
-    "    all_segment_info_df.drop('segmentIdentifier', axis=1, inplace=True)\n",
-    "    all_segment_info_df.insert(0, 'currdate', currdate_column)\n",
-    "    all_segment_info_df.insert(1, 'segmentIdentifier', segment_id_column)\n",
+    "    if all_segment_info_df.shape[0] != 0:\n",
+    "        # Move currdate & segmentIdentifier to front\n",
+    "        currdate_column = all_segment_info_df['currdate']\n",
+    "        segment_id_column = all_segment_info_df['segmentIdentifier']\n",
+    "        all_segment_info_df.drop('currdate', axis=1, inplace=True)\n",
+    "        all_segment_info_df.drop('segmentIdentifier', axis=1, inplace=True)\n",
+    "        all_segment_info_df.insert(0, 'currdate', currdate_column)\n",
+    "        all_segment_info_df.insert(1, 'segmentIdentifier', segment_id_column)\n",
     "    \n",
     "    return all_segment_info_df"
    ]
@@ -2058,12 +2059,15 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "print(\"Saving Segment Info to JSON file\")\n",
-    "os.write(1, \"\\nSaving Segment Info to JSON file\".encode())\n",
-    "calculateInfoForAllSegmentsSaveToJSON(all_segment_info_df, \n",
-    "                                      user_to_toi_and_score, \n",
-    "                                      0, #MINIMUM_TOPIC_OF_INTEREST_THRESHOLD_SCORE,\n",
-    "                                      SEGMENT_OUTPUT_DIRECTORY)"
+    "if all_segment_info_df.shape[0] == 0:\n",
+    "    os.write(1, \"\\nNo matches between individuals and individual segments found.\".encode())\n",
+    "else:\n",
+    "    print(\"Saving Segment Info to JSON file\")\n",
+    "    os.write(1, \"\\nSaving Segment Info to JSON file\".encode())\n",
+    "    calculateInfoForAllSegmentsSaveToJSON(all_segment_info_df, \n",
+    "                                          user_to_toi_and_score, \n",
+    "                                          0, #MINIMUM_TOPIC_OF_INTEREST_THRESHOLD_SCORE,\n",
+    "                                          SEGMENT_OUTPUT_DIRECTORY)"
    ]
   },
   {
