PULPO-285 Make date range configurable

--- a/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
+++ b/osb-pulpo-jobs-interests/src/main/jupyter/interests.ipynb
@@ -37,6 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Date Range configuration\n",
+    "COMPUTED_DAYS = os.environ.get(\"COMPUTED_DAYS\", default=7)\n",
     "# LCS Messaging configurations\n",
     "EUREKA_SERVER_HOST = os.environ.get(\"EUREKA_SERVER_HOST\", default=\"localhost\")\n",
     "EUREKA_SERVER_PORT = os.environ.get(\"EUREKA_SERVER_PORT\", default=8761)\n",
@@ -46,6 +48,7 @@
     "INDIVIDUAL_LCS_DESTINATION_NAME = os.environ.get(\"INDIVIDUAL_LCS_DESTINATION_NAME\", \"interests_pulpo/individual_interests_chunk_add_pre\")\n",
     "SEGMENT_LCS_DESTINATION_NAME = os.environ.get(\"SEGMENT_LCS_DESTINATION_NAME\", \"interests_pulpo/individual_segment_interests_chunk_add_pre\")\n",
     "\n",
+    "os.write(1, \"\\nComputed days: {}\".format(COMPUTED_DAYS).encode())\n",
     "os.write(1, \"\\nEureka server host: {}:{}\".format(EUREKA_SERVER_HOST, EUREKA_SERVER_PORT).encode())\n",
     "os.write(1, \"\\nSending to LCS: {}\".format(LCS_MESSAGING_ENABLED).encode())\n",
     "os.write(1, \"\\nIndividual interests destination name: {}\".format(INDIVIDUAL_LCS_DESTINATION_NAME).encode())\n",
@@ -61,7 +64,6 @@
     "# File Path Constants\n",
     "URL_IGNORE_LIST_PATH                         = './configuration/url-ignore-list.json'\n",
     "KEYWORD_IGNORE_LIST_PATH                     = './configuration/keyword-ignore-list.txt'\n",
-    "DATERANGE_CONFIGURATION_PATH                 = './configuration/daterange.txt'\n",
     "CUSTOMER_LIFERAY_MANUALLY_GENERATED_KEYWORDS = './configuration/customer-lr-manual-keywords.csv'\n",
     "WWW_LIFERAY_MANUALLY_GENERATED_KEYWORDS      = './configuration/www-lr-manual-keywords.csv'\n",
     "AMAZON_WEB_SERVICE_E3_BASE_FOLDER            = r'C:\\Users\\liferay\\Documents\\analytics data\\export'\n",
@@ -136,8 +138,7 @@
     "START_DATE_STRING = 0\n",
     "END_DATE_STRING = 0\n",
     "START_DATE_DATETIME = 0\n",
-    "END_DATE_DATETIME = 0\n",
-    "CALCULATE_YESTERDAY_ONLY = False"
+    "END_DATE_DATETIME = 0\n"
    ]
   },
   {
@@ -146,41 +147,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read configuration file for start/end dates\n",
-    "with open(DATERANGE_CONFIGURATION_PATH, 'r', encoding='utf-8') as f:\n",
-    "    \n",
-    "    # First parameter is to calculate 'all' or only 'yesterday' topics of interest\n",
-    "    for line in f:\n",
-    "        # Ignore lines starting with a pound-sign\n",
-    "        if line.startswith('#'):\n",
-    "            continue\n",
-    "        else:\n",
-    "            if line.strip() == 'yesterday':\n",
-    "                CALCULATE_YESTERDAY_ONLY = True\n",
-    "            break\n",
-    "                \n",
-    "    # Second parameter is the start date\n",
-    "    for line in f:\n",
-    "        # Ignore lines starting with a pound-sign\n",
-    "        if line.startswith('#'):\n",
-    "            continue\n",
-    "        else:\n",
-    "            START_DATE_STRING = line.strip()\n",
-    "            START_DATE_DATETIME = datetime.strptime(line.strip(), '%Y%m%d')\n",
-    "            break\n",
-    "            \n",
-    "    # Third parameter is for end date\n",
-    "    for line in f:\n",
-    "        # Ignore lines starting with a pound-sign\n",
-    "        if line.startswith('#'):\n",
-    "            continue\n",
-    "        else:\n",
-    "            if line == 'yesterday':\n",
-    "                END_DATE_DATETIME = (datetime.today() - timedelta(1))\n",
-    "                END_DATE_STRING = END_DATE_DATETIME.strftime('%Y%m%d')\n",
-    "            else:\n",
-    "                END_DATE_STRING = line.strip()\n",
-    "                END_DATE_DATETIME = datetime.strptime(line.strip(), '%Y%m%d')"
+    "# Calculate configuration for start/end dates\n",
+    "END_DATE_DATETIME = (datetime.today() - timedelta(1))\n",
+    "END_DATE_STRING = END_DATE_DATETIME.strftime('%Y%m%d')\n",
+    "START_DATE_DATETIME = (END_DATE_DATETIME - timedelta(COMPUTED_DAYS))\n",
+    "START_DATE_STRING = START_DATE_DATETIME.strftime('%Y%m%d')\n",
+    "os.write(1, \"\\nDate Range: {}:{}\".format(START_DATE_STRING, END_DATE_STRING).encode())\n"
    ]
   },
   {
@@ -194,9 +166,7 @@
     "    print(END_DATE_STRING)\n",
     "\n",
     "    print(START_DATE_DATETIME)\n",
-    "    print(END_DATE_DATETIME)\n",
-    "\n",
-    "    print(CALCULATE_YESTERDAY_ONLY)"
+    "    print(END_DATE_DATETIME)\n"
    ]
   },
   {
